AVRO-4261: [Java] Raise Java minimum to 17 and add Java 25 support
Drop Java 8 and 11 support across the build:
- Set maven.compiler.source/release to 17 in root and all modules
- Update toolchain checks to require JDK 17, 21, and 25
- Update enforcer bytecodeVersion maxJdkVersion to 17
- Replace integration test profiles [11,17,21] with [17,21,25]
- Update all CI workflows from JDK [8,11,17,21] to [17,21,25]
- Update Dockerfile to install JDK 17, 21, 25 (default 25)
- Update Getting Started docs compiler example to Java 17
- Remove dead @EnabledForJreRange(max=JAVA_11) test code